--- a/calculator.html
+++ b/calculator.html
@@ -5,56 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My calculator i JS! </title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    body {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        width: 80vw;
-        height: 100vh;
-        font-family: 'Courier New', Courier, monospace;
-        font-size: 7vh;
-
-    }
-
-    div {
-        flex-basis: 30%;
-        height: 10vh;
-        background-color: #f22;
-        text-align: center;
-    }
-
-    div.result~div:hover {
-        background-color: #f00;
-    }
-
-    div.result {
-        flex-basis: 100%;
-        background-color: #bbb;
-    }
-</style>
 
 <body>
-    <div class="result"></div>
-    <div class="one">1</div>
-    <div class="two">2</div>
-    <div class="three">3</div>
-    <div class="four">4</div>
-    <div class="five">5</div>
-    <div class="six">6</div>
-    <div class="seven">7</div>
-    <div class="eight">8</div>
-    <div class="nine">9</div>
-    <div class="zero">0</div>
-    <div class="divide">/</div>
-    <div class="multiply">*</div>
-    <div class="minus">-</div>
-    <div class="plus">+</div>
-    <div class="equal">=</div>
-    <div class="c">c</div>
+    <section>
+        <div class="result"></div>
+        <div class="one">1</div>
+        <div class="two">2</div>
+        <div class="three">3</div>
+        <div class="four">4</div>
+        <div class="five">5</div>
+        <div class="six">6</div>
+        <div class="seven">7</div>
+        <div class="eight">8</div>
+        <div class="nine">9</div>
+        <div class="zero">0</div>
+        <div class="divide">/</div>
+        <div class="multiply">*</div>
+        <div class="minus">-</div>
+        <div class="plus">+</div>
+        <div class="equal">=</div>
+        <div class="c">c</div>
+    </section>
     <script src="script.js"></script>
 </body>
 
